<resources>
    <string name="app_name">MyLogin_fireBase</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click_to_register</string>
    <string name="logout">Logout</string>
</resources>