<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="55dp"
    tools:context=".Login">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="FBLOG"
        android:textSize="40sp"
        android:textStyle="italic" />
    <TextView
        android:text="@string/login"
        android:textSize="28sp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" />-->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" />-->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_marginTop="320dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/login"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="520dp"
        android:id="@+id/RegisterNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Click to Register" />
</RelativeLayout>